--- a/result/2022-07-23.md
+++ b/result/2022-07-23.md
@@ -42,5 +42,6 @@
 42. [今天星期五](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%A4%A9%E6%98%9F%E6%9C%9F%E4%BA%94%23&Refer=top) 157755
 43. [为崽而战](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E5%B4%BD%E8%80%8C%E6%88%98%23&Refer=top) 127100
 44. [重庆一村庄河水冒泡能点燃](https://s.weibo.com//weibo?q=%23%E9%87%8D%E5%BA%86%E4%B8%80%E6%9D%91%E5%BA%84%E6%B2%B3%E6%B0%B4%E5%86%92%E6%B3%A1%E8%83%BD%E7%82%B9%E7%87%83%23&Refer=top) 50544
-45. [河南驾驶证线下业务全部暂停](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E9%A9%BE%E9%A9%B6%E8%AF%81%E7%BA%BF%E4%B8%8B%E4%B8%9A%E5%8A%A1%E5%85%A8%E9%83%A8%E6%9A%82%E5%81%9C%23&Refer=top) 29951
+45. [河南驾驶证线下业务全部暂停](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E9%A9%BE%E9%A9%B6%E8%AF%81%E7%BA%BF%E4%B8%8B%E4%B8%9A%E5%8A%A1%E5%85%A8%E9%83%A8%E6%9A%82%E5%81%9C%23&Refer=top) 36865
 46. [缔约英雄](https://s.weibo.com//weibo?q=%23%E7%BC%94%E7%BA%A6%E8%8B%B1%E9%9B%84%23&Refer=top) 23238
+47. [长沙将取消首套房面积限制性要求](https://s.weibo.com//weibo?q=%23%E9%95%BF%E6%B2%99%E5%B0%86%E5%8F%96%E6%B6%88%E9%A6%96%E5%A5%97%E6%88%BF%E9%9D%A2%E7%A7%AF%E9%99%90%E5%88%B6%E6%80%A7%E8%A6%81%E6%B1%82%23&Refer=top) 12229
