--- a/result/2022-07-23.md
+++ b/result/2022-07-23.md
@@ -46,4 +46,5 @@
 46. [长沙将取消首套房面积限制性要求](https://s.weibo.com//weibo?q=%23%E9%95%BF%E6%B2%99%E5%B0%86%E5%8F%96%E6%B6%88%E9%A6%96%E5%A5%97%E6%88%BF%E9%9D%A2%E7%A7%AF%E9%99%90%E5%88%B6%E6%80%A7%E8%A6%81%E6%B1%82%23&Refer=top) 37490
 47. [江西女职工生育可享188天产假](https://s.weibo.com//weibo?q=%23%E6%B1%9F%E8%A5%BF%E5%A5%B3%E8%81%8C%E5%B7%A5%E7%94%9F%E8%82%B2%E5%8F%AF%E4%BA%AB188%E5%A4%A9%E4%BA%A7%E5%81%87%23&Refer=top) 33181
 48. [缔约英雄](https://s.weibo.com//weibo?q=%23%E7%BC%94%E7%BA%A6%E8%8B%B1%E9%9B%84%23&Refer=top) 23238
-49. [实地评测网红小亚马逊](https://s.weibo.com//weibo?q=%23%E5%AE%9E%E5%9C%B0%E8%AF%84%E6%B5%8B%E7%BD%91%E7%BA%A2%E5%B0%8F%E4%BA%9A%E9%A9%AC%E9%80%8A%23&Refer=top) 13215
+49. [装睡的人类幼崽有多可爱](https://s.weibo.com//weibo?q=%E8%A3%85%E7%9D%A1%E7%9A%84%E4%BA%BA%E7%B1%BB%E5%B9%BC%E5%B4%BD%E6%9C%89%E5%A4%9A%E5%8F%AF%E7%88%B1&Refer=top) 14831
+50. [实地评测网红小亚马逊](https://s.weibo.com//weibo?q=%23%E5%AE%9E%E5%9C%B0%E8%AF%84%E6%B5%8B%E7%BD%91%E7%BA%A2%E5%B0%8F%E4%BA%9A%E9%A9%AC%E9%80%8A%23&Refer=top) 13215
